@@ -1,3 +1,4 @@
 2008-12-12  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Initial code with sitemap for pages
+	* Added news sitemap
